# django-statictext

./: .gitignore  README.md  README.rst  setup.cfg  setup.py  tox.ini
src/statictext/: admin.py  models.py
statictext/: admin.py  forms.py  models.py  tests.py
statictext/migrations/: 0001_initial.py  0002_statictext_kicker.py  0003_auto__add_unique_statictext_slug_site.py  0004_auto__del_field_statictext_URL__add_field_statictext_url.py  0005_auto__add_field_statictext_layout.py
statictext/south_migrations/: 0002_auto__add_field_statictext_site.py
tests/: settings.py  test_statictext.py
