[bumpversion]
current_version = 1.1.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[pycodestyle]
exclude = tmp,src/statictext/migrations/*
ignore = E722
max-line-length = 100

# For coverage options, see https://coverage.readthedocs.io/en/coverage-4.2/config.html
[coverage:run]
branch = True
source = statictext
omit = **/migrations/**

[coverage:html]
directory = build/coverage
title = StaticText Coverage

[coverage:report]
# Regexes for lines to exclude from consideration
ignore_errors = True
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
